<resources>
    <string name="app_name">CWTMS</string> <!--WTMS-->
    <string name="Rs">\u20B9</string>
    <string name="filters">Filters</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="range">Range</string>
    <string name="property_type">Property Type</string>
    <string name="select">Select</string>
    <string name="color_unpaid">Color Unpaid</string>
    <string name="ungroup_points_view">Ungroup Points View</string>
    <string name="clear">Clear</string>
    <string name="apply">Apply</string>

</resources>
