<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_3x">

        <TextView
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/filters"
            android:textSize="@dimen/dialog_text"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/dialog_img_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_close" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorPrimary"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_3x">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_3x"
                    android:text="@string/from"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/dialog_filter_option_text"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/dialog_edt_amount_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_box_bg"
                    android:hint="@string/Rs"
                    android:imeOptions="actionNext"
                    android:inputType="numberSigned"
                    android:maxLines="1"
                    android:padding="@dimen/space_3x"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/dialog_filter_option_text"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_2x"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_3x"
                    android:text="@string/to"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/dialog_filter_option_text"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/dialog_edt_amount_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_box_bg"
                    android:hint="@string/Rs"
                    android:imeOptions="actionDone"
                    android:inputType="numberSigned"
                    android:maxLines="1"
                    android:padding="@dimen/space_3x"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/dialog_filter_option_text"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4x"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/space_3x"
                android:text="@string/range"
                android:textColor="@color/white"
                android:textSize="@dimen/dialog_filter_option_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dialog_edt_range"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/input_box_bg"
                android:hint="@string/Rs"
                android:imeOptions="actionDone"
                android:inputType="numberSigned"
                android:maxLines="1"
                android:padding="@dimen/space_3x"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/dialog_filter_option_text"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4x">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/space_3x"
                android:text="@string/property_type"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dialog_filter_option_text"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/dialog_spn_property_type"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/input_box_bg"
                android:gravity="center_vertical"
                android:padding="@dimen/space_3x">

                <TextView
                    android:id="@+id/dialog_txt_property_type_filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_3x"
                    android:layout_toStartOf="@+id/ic_down_arrow"
                    android:text="@string/select"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/dialog_filter_option_text"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ic_down_arrow"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_down_arrow" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4x">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/space_3x"
                android:layout_toStartOf="@+id/dialog_view_color_unpaid"
                android:text="@string/color_unpaid"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dialog_filter_option_text"
                android:textStyle="bold" />

            <View
                android:id="@+id/dialog_view_color_unpaid"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:background="@color/red2" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4x">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/space_3x"
                android:layout_toStartOf="@+id/dialog_chk_ungroup_points"
                android:text="@string/ungroup_points_view"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dialog_filter_option_text"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/dialog_chk_ungroup_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:button="@drawable/check_box_selector" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4x"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="@dimen/space_3x"
                android:layout_weight="1"
                android:background="@drawable/btn_filter_dialog_bg"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/dialog_btn_apply"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:background="@drawable/btn_filter_dialog_bg"
                android:text="@string/apply"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>